# mod-rand

./: CHANGELOG.md  Cargo.toml  README.md  REPS.md  clippy.toml
benches/: common.rs  tier1.rs  tier2.rs  tier3.rs
docs/: API.md
examples/: basic.rs  bounded_ranges.rs  tier1_simulation.rs  tier2_tempdir.rs  tier3_token.rs
src/: lib.rs  tier1.rs  tier2.rs  tier3.rs
tests/: concurrency.rs  kat.rs  range.rs  smoke.rs  statistical.rs
tests/common/: mod.rs
